--- a/.gitmodules
+++ b/.gitmodules
@@ -156,3 +156,6 @@
 [submodule "libraries/elapsedMillis"]
 	path = libraries/elapsedMillis
 	url = https://github.com/pfeerick/elapsedMillis.git
+[submodule "3rdParty/Wormhole_484"]
+	path = 3rdParty/Wormhole_484
+	url = https://github.com/haybur/Wormhole_484.git
