--- a/.gitmodules
+++ b/.gitmodules
@@ -162,3 +162,9 @@
 [submodule "libraries/TeensyDMX"]
 	path = libraries/TeensyDMX
 	url = https://github.com/ssilverman/TeensyDMX.git
+[submodule "libraries/AnimatedGIF"]
+	path = libraries/AnimatedGIF
+	url = https://github.com/bitbank2/AnimatedGIF.git
+[submodule "libraries/ESP32-HUB75-MatrixPanel-I2S-DMA"]
+	path = libraries/ESP32-HUB75-MatrixPanel-I2S-DMA
+	url = https://github.com/mrfaptastic/ESP32-HUB75-MatrixPanel-I2S-DMA.git
